Fixed horizontal color on iOS devices (maybe some Android)

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
     color: white;
     height: 100%;
     width: 100%;
+    background-size: cover;
     overflow-x: hidden;
 }
 
